fix: 将build脚本从Windows语法改为Bash语法，解决Vercel构建失败问题

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:client": "vite --host --port 3000",
     "dev": "pnpm dev:client",
     "build:client": "vite build --outDir dist/static",
-    "build": "if exist dist rd /s /q dist && pnpm build:client && copy package.json dist && echo. > dist/build.flag",
+    "build": "rm -rf dist && pnpm build:client && mkdir -p dist && cp package.json dist/ && touch dist/build.flag",
     "typecheck": "tsc -p tsconfig.typecheck.json --noEmit"
   },
   "dependencies": {
