fix: 添加Serverless Functions配置，解决API端点无法工作问题

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist/static" }
+    },
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
     }
   ],
   "installCommand": "pnpm install --no-frozen-lockfile",
