--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.9.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.3.0",
