--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,18 @@
 {
   "builds": [
     {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist/static" }
-    },
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
     }
   ],
   "installCommand": "pnpm install --no-frozen-lockfile",
   "buildCommand": "pnpm build",
+  "devCommand": "vite --port $PORT",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
