更新配置文件和修复类型错误，重新部署

--- a/tsconfig.api.json
+++ b/tsconfig.api.json
@@ -19,8 +19,9 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["@types/node", "@vercel/node"]
   },
-  "include": ["api/**/*.ts"],
+  "include": ["api/**/*.ts", "api/types/**/*.d.ts", "server/**/*.mjs"],
   "exclude": ["node_modules"]
 }
