--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vercel/node": "^5.5.13",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "mkdirp": "^3.0.1",
