--- a/tsconfig.api.json
+++ b/tsconfig.api.json
@@ -5,7 +5,7 @@
     "lib": ["ES2020"],
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
