修复页面刷新后内容消失问题，更新vercel.json路由配置

--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
     },
     {
       "src": "/((?!api/).*)",
-      "dest": "/$1",
+      "dest": "/index.html",
       "status": 200
     }
   ],
