修复路由配置，确保SPA路由正常工作

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,11 @@
       }
     },
     {
-      "src": "/((?!api/).*)",
+      "src": "\.(js|css|png|jpg|gif|ico|svg|woff|woff2|ttf|eot)$",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/index.html",
       "status": 200
     }
