修复vercel.json文件中的JSON语法错误

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
       }
     },
     {
-      "src": "\.(js|css|png|jpg|gif|ico|svg|woff|woff2|ttf|eot)$",
+      "src": "\\.(js|css|png|jpg|gif|ico|svg|woff|woff2|ttf|eot)$",
       "dest": "/$1"
     },
     {
