--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss": "^8.5.3",
     "rimraf": "^6.1.2",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.44.1",
     "typescript": "~5.7.2",
     "update-browserslist-db": "^1.1.4",
     "vite": "^6.2.0",
