--- a/vercel.json
+++ b/vercel.json
@@ -28,18 +28,18 @@
     },
     {
       "src": "/assets/(.*)",
-      "dest": "/static/assets/$1",
+      "dest": "/assets/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
       "src": "/index.html",
-      "dest": "/static/index.html"
+      "dest": "/index.html"
     },
     {
       "src": "/(.*)",
-      "dest": "/static/index.html",
+      "dest": "/index.html",
       "status": 200
     }
   ],
