--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "dev": "concurrently \"pnpm dev:client\" \"pnpm dev:server\"",
     "build:client": "vite build --outDir dist/static",
     "build": "rimraf dist && pnpm build:client && mkdirp dist && node -e \"require('fs').copyFileSync('package.json', 'dist/package.json')\" && node -e \"require('fs').writeFileSync('dist/build.flag', '')\"",
+    "build:analyze": "set ANALYZE=true && pnpm build:client",
     "typecheck": "tsc -p tsconfig.typecheck.json --noEmit"
   },
   "dependencies": {
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/hands": "^0.4.1675469240",
     "@neondatabase/serverless": "^1.0.2",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-core": "^4.22.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-window": "^2.0.0",
@@ -36,6 +42,7 @@
     "sonner": "^2.0.2",
     "tailwind-merge": "^3.0.2",
     "three": "^0.181.2",
+    "workbox-window": "^7.4.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -50,11 +57,13 @@
     "mkdirp": "^3.0.1",
     "postcss": "^8.5.3",
     "rimraf": "^6.1.2",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^3.4.17",
     "terser": "^5.44.1",
     "typescript": "~5.7.2",
     "update-browserslist-db": "^1.1.4",
     "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "pnpm": {
