--- a/vercel.json
+++ b/vercel.json
@@ -69,7 +69,7 @@
       }
     },
     {
-      "src": "/workbox-(.*)\.js",
+      "src": "/workbox-(.*)\\.js",
       "dest": "/workbox-$1.js",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
