fix: 修复Vercel路由配置，确保静态资源正确处理

--- a/vercel.json
+++ b/vercel.json
@@ -10,14 +10,14 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "source": "/(.*\.(js|css|png|jpg|jpeg|gif|svg|ico|json|webmanifest|wasm))$",
+      "destination": "/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
