fix: 配置Vercel API路由和函数，解决API 404问题

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    },
+    {
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
@@ -10,6 +14,44 @@
       }
     }
   ],
+  "functions": {
+    "api/auth/login.ts": {
+      "maxDuration": 10
+    },
+    "api/auth/me.ts": {
+      "maxDuration": 10
+    },
+    "api/auth/register.ts": {
+      "maxDuration": 10
+    },
+    "api/categories/[id].ts": {
+      "maxDuration": 10
+    },
+    "api/categories/index.ts": {
+      "maxDuration": 10
+    },
+    "api/comments/[id].ts": {
+      "maxDuration": 10
+    },
+    "api/comments/index.ts": {
+      "maxDuration": 10
+    },
+    "api/likes/index.ts": {
+      "maxDuration": 10
+    },
+    "api/posts/[id].ts": {
+      "maxDuration": 10
+    },
+    "api/posts/index.ts": {
+      "maxDuration": 10
+    },
+    "api/tags/[id].ts": {
+      "maxDuration": 10
+    },
+    "api/tags/index.ts": {
+      "maxDuration": 10
+    }
+  },
   "rewrites": [
     {
       "source": "/assets/(.*)",
