--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,14 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/static",
-        "buildCommand": "npm run build"
+        "buildCommand": "pnpm build"
       }
     }
   ],
+  "installCommand": "pnpm install",
+  "pnpm": {
+    "version": "latest"
+  },
   "rewrites": [
     {
       "source": "/assets/(.*)",
