--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,11 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/static",
-        "buildCommand": "pnpm build"
+        "buildCommand": "pnpm build",
+        "installCommand": "pnpm install"
       }
     }
   ],
-  "installCommand": "pnpm install",
-  "pnpm": {
-    "version": "latest"
-  },
   "rewrites": [
     {
       "source": "/assets/(.*)",
