--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/static-build",
       "config": {
         "distDir": "dist/static",
-        "buildCommand": "npm run build"
+        "buildCommand": "pnpm build"
       }
     }
   ],
@@ -43,5 +43,6 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "packageManager": "pnpm@latest"
 }
