Fix API routing issue by adding /api/(.*) rewrite rule

--- a/vercel.json
+++ b/vercel.json
@@ -44,6 +44,10 @@
       "destination": "https://trae-api-sg.mchost.guru/$1"
     },
     {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
