--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/xr": "^6.6.28",
+    "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-window": "^2.0.0",
