--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,5 @@
   "version": 2,
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build",
-  "outputDirectory": "dist",
-  "rewrites": [
-    {
-      "source": "/(.*)\.(.*)",
-      "destination": "/$1.$2"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "outputDirectory": "dist"
 }
