--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,31 @@
   "version": 2,
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "routes": [
+    {
+      "src": "/api/proxy/trae-api/(.*)",
+      "dest": "/api/proxy/trae-api.js"
+    },
+    {
+      "src": "/api/proxy/unsplash/(.*)",
+      "dest": "/api/proxy/unsplash.js"
+    },
+    {
+      "src": "/api/proxy/video",
+      "dest": "/api/proxy/video.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json|webmanifest)$",
+      "dest": "$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
