--- a/vercel.json
+++ b/vercel.json
@@ -3,30 +3,14 @@
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build",
   "outputDirectory": "dist",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/proxy/trae-api/(.*)",
-      "dest": "/api/proxy/trae-api.js"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
-      "src": "/api/proxy/unsplash/(.*)",
-      "dest": "/api/proxy/unsplash.js"
-    },
-    {
-      "src": "/api/proxy/video",
-      "dest": "/api/proxy/video.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json|webmanifest)$",
-      "dest": "$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
