--- a/package.json
+++ b/package.json
@@ -29,18 +29,20 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-window": "^2.0.0",
-    "@vercel/analytics": "^1.6.1",
-    "@vercel/speed-insights": "^1.3.1",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.9.2",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "pg": "^8.16.3",
+    "puppeteer": "^24.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.3.0",
     "react-window": "^2.2.3",
@@ -48,6 +50,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2",
+    "three-stdlib": "^2.36.1",
     "use-sync-external-store": "^1.6.0",
     "ws": "^8.18.3",
     "zod": "^3.24.2",
@@ -79,6 +82,7 @@
     "typescript": "~5.7.2",
     "update-browserslist-db": "^1.2.2",
     "vite": "^6.4.1",
+    "vite-bundle-analyzer": "^1.3.2",
     "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
