--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,8 @@
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build",
   "outputDirectory": "dist",
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/(.*)",
@@ -12,25 +14,28 @@
           "value": "public, max-age=0, must-revalidate"
         }
       ]
-    },
-    {
-      "source": "/(index.html|manifest.webmanifest|sw.js|workbox-.*.js|registerSW.js)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "no-store, no-cache, must-revalidate, proxy-revalidate"
-        }
-      ]
     }
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "source": "/(.*.(js|css|png|jpg|jpeg|svg|gif|woff2|woff|ttf|json|ico|webmanifest|txt))$",
+      "destination": "/$1"
     },
     {
-      "source": "/(manifest.webmanifest|sw.js|workbox-.*.js|registerSW.js|icons/.*|images/.*|assets/.*|chunks/.*|entries/.*)",
-      "destination": "/$1"
+      "source": "/icons/(.*)",
+      "destination": "/icons/$1"
+    },
+    {
+      "source": "/assets/(.*)",
+      "destination": "/assets/$1"
+    },
+    {
+      "source": "/chunks/(.*)",
+      "destination": "/chunks/$1"
+    },
+    {
+      "source": "/entries/(.*)",
+      "destination": "/entries/$1"
     },
     {
       "source": "/(.*)",
