--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,14 @@
   "version": 2,
   "packageManager": "pnpm",
   "framework": "vite",
+  "build": {
+    "command": "pnpm build",
+    "outputDirectory": "dist",
+    "installCommand": "pnpm install",
+    "env": {
+      "NODE_ENV": "production"
+    }
+  },
   "routes": [
     {
       "handle": "filesystem"
@@ -10,5 +18,6 @@
       "src": "/(.*)",
       "dest": "/"
     }
-  ]
+  ],
+  "ignoreCommand": "git diff --quiet HEAD^ HEAD -- ./package.json ./pnpm-lock.yaml ./vite.config.ts ./src"
 }
