--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "vercel-build": "pnpm install && pnpm build"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
