--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@neondatabase/serverless": "^1.0.2",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
-    "@react-three/xr": "^6.6.28",
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -76,6 +75,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mkdirp": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "rimraf": "^6.1.2",
     "rollup-plugin-visualizer": "^6.0.5",
