--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@mediapipe/hands": "^0.4.1675469240",
     "@neondatabase/neon-js": "0.1.0-beta.19",
     "@neondatabase/serverless": "^1.0.2",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
+    "@react-three/drei": "^9.80.0",
+    "@react-three/fiber": "^8.15.0",
     "@supabase/supabase-js": "^2.89.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
@@ -37,7 +37,7 @@
     "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
-    "framer-motion": "^12.9.2",
+    "framer-motion": "^11.10.0",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "jsonwebtoken": "^9.0.3",
@@ -79,6 +79,8 @@
     "postcss": "^8.5.6",
     "rimraf": "^6.1.2",
     "rollup-plugin-visualizer": "^6.0.5",
+    "sharp": "^0.34.5",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "terser": "^5.44.1",
     "ts-jest": "^29.2.5",
@@ -87,6 +89,7 @@
     "update-browserslist-db": "^1.2.2",
     "vite": "^6.4.1",
     "vite-bundle-analyzer": "^1.3.2",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
@@ -94,5 +97,8 @@
     "onlyBuiltDependencies": [
       "better-sqlite3"
     ]
+  },
+  "resolutions": {
+    "react-reconciler": "^0.28.0"
   }
 }
