--- a/package.json
+++ b/package.json
@@ -18,80 +18,81 @@
     "vercel-build": "pnpm install && pnpm build"
   },
   "dependencies": {
-    "@amap/amap-jsapi-loader": "^1.0.1",
-    "@bufbuild/protobuf": "^2.10.2",
-    "@fortawesome/fontawesome-free": "^7.1.0",
-    "@mediapipe/camera_utils": "^0.3.1675466862",
-    "@mediapipe/hands": "^0.4.1675469240",
+    "@amap/amap-jsapi-loader": "1.0.1",
+    "@bufbuild/protobuf": "2.10.2",
+    "@fortawesome/fontawesome-free": "7.1.0",
+    "@mediapipe/camera_utils": "0.3.1675466862",
+    "@mediapipe/hands": "0.4.1675469240",
     "@neondatabase/neon-js": "0.1.0-beta.19",
-    "@neondatabase/serverless": "^1.0.2",
-    "@react-three/drei": "^9.80.0",
-    "@react-three/fiber": "^8.15.0",
-    "@supabase/supabase-js": "^2.89.0",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/react-window": "^2.0.0",
-    "@vercel/analytics": "^1.6.1",
-    "@vercel/speed-insights": "^1.3.1",
-    "bcryptjs": "^3.0.3",
-    "better-sqlite3": "^12.5.0",
-    "clsx": "^2.1.1",
-    "dotenv": "^17.2.3",
-    "framer-motion": "^11.10.0",
-    "i18next": "^25.7.3",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "jsonwebtoken": "^9.0.3",
-    "mongodb": "^7.0.0",
-    "pg": "^8.16.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^16.5.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.3.0",
-    "react-window": "^2.2.3",
-    "recharts": "^2.15.1",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "three": "^0.181.2",
-    "three-stdlib": "^2.36.1",
-    "use-sync-external-store": "^1.6.0",
-    "ws": "^8.18.3",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.9"
+    "@neondatabase/serverless": "1.0.2",
+    "@react-three/drei": "9.80.0",
+    "@react-three/fiber": "8.15.0",
+    "@supabase/supabase-js": "2.89.0",
+    "@types/bcryptjs": "3.0.0",
+    "@types/jsonwebtoken": "9.0.10",
+    "@types/react-window": "2.0.0",
+    "@vercel/analytics": "1.6.1",
+    "@vercel/speed-insights": "1.3.1",
+    "bcryptjs": "3.0.3",
+    "better-sqlite3": "12.5.0",
+    "clsx": "2.1.1",
+    "dotenv": "17.2.3",
+    "framer-motion": "11.10.0",
+    "i18next": "25.7.3",
+    "i18next-browser-languagedetector": "8.2.0",
+    "jsonwebtoken": "9.0.3",
+    "mongodb": "7.0.0",
+    "pg": "8.16.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-i18next": "16.5.0",
+    "react-markdown": "10.1.0",
+    "react-reconciler": "0.28.0",
+    "react-router-dom": "7.3.0",
+    "react-window": "2.2.3",
+    "recharts": "2.15.1",
+    "sonner": "2.0.7",
+    "tailwind-merge": "3.4.0",
+    "three": "0.181.2",
+    "three-stdlib": "2.36.1",
+    "use-sync-external-store": "1.6.0",
+    "ws": "8.18.3",
+    "zod": "3.24.2",
+    "zustand": "5.0.9"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^24.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/three": "^0.181.0",
-    "@vercel/node": "^5.5.15",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.22",
-    "concurrently": "^9.2.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "mkdirp": "^3.0.1",
-    "node-fetch": "^3.3.2",
-    "postcss": "^8.5.6",
-    "rimraf": "^6.1.2",
-    "rollup-plugin-visualizer": "^6.0.5",
-    "sharp": "^0.34.5",
-    "svgo": "^4.0.0",
-    "tailwindcss": "^3.4.17",
-    "terser": "^5.44.1",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "14.3.1",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.12",
+    "@types/node": "24.10.1",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@types/three": "0.181.0",
+    "@vercel/node": "5.5.15",
+    "@vitejs/plugin-react": "4.7.0",
+    "autoprefixer": "10.4.22",
+    "concurrently": "9.2.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "mkdirp": "3.0.1",
+    "node-fetch": "3.3.2",
+    "postcss": "8.5.6",
+    "rimraf": "6.1.2",
+    "rollup-plugin-visualizer": "6.0.5",
+    "sharp": "0.34.5",
+    "svgo": "4.0.0",
+    "tailwindcss": "3.4.17",
+    "terser": "5.44.1",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
     "typescript": "~5.7.2",
-    "update-browserslist-db": "^1.2.2",
-    "vite": "^6.4.1",
-    "vite-bundle-analyzer": "^1.3.2",
-    "vite-plugin-image-optimizer": "^2.0.3",
-    "vite-plugin-pwa": "^1.2.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "update-browserslist-db": "1.2.2",
+    "vite": "6.4.1",
+    "vite-bundle-analyzer": "1.3.2",
+    "vite-plugin-image-optimizer": "2.0.3",
+    "vite-plugin-pwa": "1.2.0",
+    "vite-tsconfig-paths": "5.1.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
