--- a/package.json
+++ b/package.json
@@ -28,21 +28,13 @@
     "@react-three/drei": "9.80.0",
     "@react-three/fiber": "8.15.0",
     "@supabase/supabase-js": "2.89.0",
-    "@types/bcryptjs": "3.0.0",
-    "@types/jsonwebtoken": "9.0.10",
-    "@types/react-window": "2.0.0",
     "@vercel/analytics": "1.6.1",
     "@vercel/speed-insights": "1.3.1",
-    "bcryptjs": "3.0.3",
-    "better-sqlite3": "12.5.0",
     "clsx": "2.1.1",
     "dotenv": "17.2.3",
     "framer-motion": "11.10.0",
     "i18next": "25.7.3",
     "i18next-browser-languagedetector": "8.2.0",
-    "jsonwebtoken": "9.0.3",
-    "mongodb": "7.0.0",
-    "pg": "8.16.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "16.5.0",
@@ -56,7 +48,6 @@
     "three": "0.181.2",
     "three-stdlib": "2.36.1",
     "use-sync-external-store": "1.6.0",
-    "ws": "8.18.3",
     "zod": "3.24.2",
     "zustand": "5.0.9"
   },
@@ -64,19 +55,27 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "14.3.1",
     "@testing-library/user-event": "14.5.2",
+    "@types/bcryptjs": "3.0.0",
     "@types/jest": "29.5.12",
+    "@types/jsonwebtoken": "9.0.10",
     "@types/node": "24.10.1",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@types/react-window": "2.0.0",
     "@types/three": "0.181.0",
     "@vercel/node": "5.5.15",
     "@vitejs/plugin-react": "4.7.0",
     "autoprefixer": "10.4.22",
+    "bcryptjs": "3.0.3",
+    "better-sqlite3": "12.5.0",
     "concurrently": "9.2.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jsonwebtoken": "9.0.3",
     "mkdirp": "3.0.1",
+    "mongodb": "7.0.0",
     "node-fetch": "3.3.2",
+    "pg": "8.16.3",
     "postcss": "8.5.6",
     "rimraf": "6.1.2",
     "rollup-plugin-visualizer": "6.0.5",
@@ -92,13 +91,10 @@
     "vite-bundle-analyzer": "1.3.2",
     "vite-plugin-image-optimizer": "2.0.3",
     "vite-plugin-pwa": "1.2.0",
-    "vite-tsconfig-paths": "5.1.4"
+    "vite-tsconfig-paths": "5.1.4",
+    "ws": "8.18.3"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "better-sqlite3"
-    ]
-  },
+
   "resolutions": {
     "react-reconciler": "^0.28.0"
   },
