--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "esModuleInterop": true,
 
     /* Paths */
     "baseUrl": "./",
