--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "version": 2,
-  "framework": "vite",
   "builds": [
     {
       "src": "package.json",
@@ -43,6 +42,10 @@
     {
       "src": "/api/health/ping",
       "dest": "/api/health/ping.js"
+    },
+    {
+      "src": "/_next/image(.*)",
+      "status": 404
     },
     {
       "handle": "filesystem"
