Set landing.html as default entry point and implement redirect flow

--- a/vercel.json
+++ b/vercel.json
@@ -48,6 +48,17 @@
       "status": 404
     },
     {
+      "src": "^/$",
+      "status": 302,
+      "headers": {
+        "Location": "/landing.html"
+      }
+    },
+    {
+      "src": "/landing.html",
+      "status": 200
+    },
+    {
       "handle": "filesystem"
     },
     {
